# complex-to-psql-tools

./: Makefile  README  openfn-b3d68eb9-0c93-4e7c-9c1d-84cd8d15388b-config.json  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: openfn-b3d68eb9-0c93-4e7c-9c1d-84cd8d15388b-deploy.yml
complex_to_psql_tools/: drop_invalid_dates.py  generate_date_fixer.py
complex_to_psql_tools/tests/: test_drop_invalid_dates.py  test_generate_date_fixer.py  util.py
complex_to_psql_tools/tests/data/: R_export.txt.xls
